Return a todo item when creating a new item
